修改getAllForums
