# docs/swagger.json
@@ -5,48 +5,6 @@
     },
     "paths": {
         "/forums": {
-            "get": {
-                "description": "GetAllPublicFroums",
-                "consumes": [
-                    "application/json"
-                ],
-                "produces": [
-                    "application/json"
-                ],
-                "tags": [
-                    "Forums"
-                ],
-                "summary": "GetAllPublicFroums",
-                "responses": {
-                    "200": {
-                        "description": "获取全部公开论坛",
-                        "schema": {
-                            "allOf": [
-                                {
-                                    "$ref": "#/definitions/responses.StatusOKResponse"
-                                },
-                                {
-                                    "type": "object",
-                                    "properties": {
-                                        "data": {
-                                            "type": "array",
-                                            "items": {
-                                                "$ref": "#/definitions/models.Forum"
-                                            }
-                                        }
-                                    }
-                                }
-                            ]
-                        }
-                    },
-                    "500": {
-                        "description": "服务器错误",
-                        "schema": {
-                            "$ref": "#/definitions/responses.StatusInternalServerError"
-                        }
-                    }
-                }
-            },
             "post": {
                 "description": "CreateForum",
                 "consumes": [
@@ -935,7 +893,7 @@
                                     "type": "object",
                                     "properties": {
                                         "data": {
-                                            "$ref": "#/definitions/responses.Token"
+                                            "$ref": "#/definitions/controllers.LoginResponse"
                                         }
                                     }
                                 }
@@ -1193,6 +1151,17 @@
         }
     },
     "definitions": {
+        "controllers.LoginResponse": {
+            "type": "object",
+            "properties": {
+                "token": {
+                    "type": "string"
+                },
+                "user_id": {
+                    "type": "string"
+                }
+            }
+        },
         "models.ExtendedFile": {
             "type": "object",
             "properties": {
@@ -1210,29 +1179,6 @@
                 },
                 "postID": {
                     "type": "integer"
-                }
-            }
-        },
-        "models.Forum": {
-            "type": "object",
-            "properties": {
-                "cover": {
-                    "type": "string"
-                },
-                "create_at": {
-                    "type": "string"
-                },
-                "description": {
-                    "type": "string"
-                },
-                "forum_id": {
-                    "type": "integer"
-                },
-                "forum_name": {
-                    "type": "string"
-                },
-                "is_public": {
-                    "type": "boolean"
                 }
             }
         },
@@ -1439,14 +1385,6 @@
                     "type": "object"
                 },
                 "msg": {
-                    "type": "string"
-                }
-            }
-        },
-        "responses.Token": {
-            "type": "object",
-            "properties": {
-                "token": {
                     "type": "string"
                 }
             }
